# code-first-pipelines

./: .gitignore  Dockerfile  Makefile  contributing.md  license  mypy.ini  pyproject.toml  readme.md  security.md  version.cfg
.github/workflows/: check-code.yml  codeql-analysis.yml  release.yml
cf_pipelines/: __init__.py  exceptions.py
cf_pipelines/base/: helper_classes.py  pipeline.py  utils.py
cf_pipelines/cli/: __main__.py
cf_pipelines/ml/: __init__.py  drawing_utils.py  machine_learning_step.py  ml_pipeline.py
cf_pipelines/ml/contrib/: mlflow_storage_client.py
cf_pipelines/ml/contrib/metrics/: metrics_publisher.py  models.py
cf_pipelines/ml/project_template/: cookiecutter.json
cf_pipelines/ml/project_template/{{cookiecutter.pipeline_slug}}/: readme.md  requirements.txt  test_{{cookiecutter.pipeline_slug}}_pipeline.py  {{cookiecutter.pipeline_slug}}_pipeline.py
cf_pipelines/serializers/: __init__.py  custom.py
tests/: conftest.py
tests/base/: test_exception_handling.py  test_pipeline.py  test_pipeline_extra_args.py  test_pipelines_loops.py  test_simple_pipeline.py  test_utils.py  test_utils_functions.py  test_utils_wraps.py
tests/ml/: test_drawing_ml_pipeline.py  test_ml_pipeline.py
tutorials/: Introduction to ML Pipelines.ipynb  Introduction to Pipelines.ipynb  Parametrise pipelines.ipynb
