[tool.poetry]
name = "code-first-pipelines"
version = "0.9.0"
description = "A framework built on top of Ploomber that allows code-first definition of pipelines."
authors = ["Prediction and Learning at Simply Business <pal@simplybusiness.co.uk>"]
readme = "readme.md"
packages = [
    { include = "cf_pipelines" }
]
include = ["cf_pipelines/ml/project_template"]

[tool.poetry.scripts]
pipelines = "cf_pipelines.cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "*"
mlflow = "^1.26.0"
ploomber = "^0.19.2"
pygraphviz = {version = "^1.9", optional = true }
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.1"
fastparquet = "^0.8.1"
freezegun = "^1.2.1"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
mypy = "^0.950"
pandas = "^1.4.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
scikit-learn = "^1.1.0"
types-setuptools = "^57.4.17"

[tool.poetry.extras]
graphviz=["pygraphviz"]

[project.optional-dependencies]
graphviz=["pygraphviz"]

[tool.black]
line-length = 120
exclude = '(\.git|\.mypy_cache|\.venv|\.pytest_cache|build|dist|[a-z]+_template)'

[tool.isort]
skip_glob = "*/.*/*,.*"
default_section = "THIRDPARTY"
known_first_party = "cf_pipelines"
line_length = 120
force_grid_wrap = false
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
