[tool.poetry]
name = "code-first-pipelines"
version = "1.0.0"
description = "A framework built on top of Ploomber that allows code-first definition of pipelines."
authors = ["Prediction and Learning at Simply Business <pal@simplybusiness.co.uk>"]
readme = "readme.md"
packages = [
    { include = "cf_pipelines" }
]
include = ["cf_pipelines/ml/project_template"]

[tool.poetry.scripts]
pipelines = "cf_pipelines.cli.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cookiecutter = "^2.1.1"
mlflow = "^1.29.0"
ploomber = "^0.21.1"
pygraphviz = {version = "^1.10", optional = true }
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
bump2version = "^1.0.1"
fastparquet = "^0.8.3"
freezegun = "^1.2.2"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.8"
matplotlib = "^3.6.0"
mypy = "^0.982"
pandas = "^1.5.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
scikit-learn = "^1.1.2"
types-setuptools = "^65.4.0"
Sphinx = "^5.2.3"

[tool.poetry.extras]
graphviz=["pygraphviz"]

[project.optional-dependencies]
graphviz=["pygraphviz"]

[tool.black]
line-length = 120
exclude = '(\.git|\.mypy_cache|\.venv|\.pytest_cache|build|dist|[a-z]+_template)'

[tool.isort]
skip_glob = "*/.*/*,.*"
default_section = "THIRDPARTY"
known_first_party = "cf_pipelines"
line_length = 120
force_grid_wrap = false
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
